Changed parameters names in messages endpoints.
